# sppl

./: pyproject.toml  setup.py
sppl/: distributions.py
