[tool.poetry]
name = "sppl"
version = "0.1.0"
description = ""
authors = ["joaoloula <jloula@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astunparse = "^1.6.3"
numpy = "^1.26.0"
scipy = "^1.11.3"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
